# o3de

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  GOVERNANCE.md  LICENSE.txt  README.md  ROADMAP.md  SECURITY.md  engine.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  foa-sdk-build-status.json  owner-build-trigger.txt  pull_request_template.md
.github/ISSUE_TEMPLATE/: tg_sdk_feature.yml
.github/remediation/: final_pr_validation.yml
.github/workflows/: android-build.yml  apply-full-review-candidate-repairs.yml  apply-project-wide-security-repairs.yml  ar-canary.yml  ar.yml  build-foa-sdk-installer-launcher.yml  fix-pr91-residual-validation.yml  foa-sdk-enforce-and-build.yml  foa-sdk-failure-issue.yml  foa-sdk-fix-and-build.yml  foa-sdk-installer-inventory-pr.yml  foa-sdk-owner-build.yml  foa-sdk-owner-dispatch.yml  foa-sdk-run-monitor.yml  gate5-canonical-interchange-compiled.yml  linux-build.yml  semantic-hook-offline.yml  tainted-grail-editor-entry.yml  tainted-grail-repository-hygiene.yml  tainted-grail-sdk-foundation.yml  tainted-grail-sdk-installer.yml  tainted-grail-sdk-pr-validation.yml  windows-build.yml
AutomatedTesting/Gem/: CMakeLists.txt
Code/Editor/: CheckOutDialog.cpp  CheckOutDialog.h  ConsoleDialog.cpp  ConsoleDialog.h  CryEdit.cpp  CryEdit.h  CryEditDoc.cpp  CryEditDoc.h  CryEditPy.cpp  CustomAspectRatioDlg.cpp  CustomAspectRatioDlg.h  CustomResolutionDlg.h  CustomizeKeyboardDialog.cpp  CustomizeKeyboardDialog.h  EditorPreferencesTreeWidgetItemDelegate.cpp  EditorViewportWidget.cpp  EditorViewportWidget.h  ErrorDialog.cpp  ErrorDialog.h  ErrorReportDialog.cpp  ErrorReportDialog.h  ErrorReportTableModel.cpp  ErrorReportTableModel.h  FBXExporterDialog.cpp  FBXExporterDialog.h  GameEngine.cpp  GameEngine.h  GenericSelectItemDialog.cpp  GenericSelectItemDialog.h  GotoPositionDlg.cpp  GotoPositionDlg.h  LayoutConfigDialog.cpp  LayoutConfigDialog.h  LayoutWnd.cpp  LayoutWnd.h  LevelFileDialog.cpp  LevelFileDialog.h  LevelFileDialog.ui  LevelRoots.cpp  LevelRoots.h  (+35 more)
Docker/: build.sh
Gems/AFR/: CMakeLists.txt
Gems/Achievements/: CMakeLists.txt
Gems/Archive/: CMakeLists.txt
Gems/AssetValidation/: CMakeLists.txt
Gems/Atom/RPI/: CMakeLists.txt
Gems/Atom/RPI/Code/Include/Atom/RPI.Reflect/Material/: MaterialTypeAsset.h
Gems/Atom/RPI/Code/Source/RPI.Builders/Model/: ModelAssetBuilderComponent.cpp
Gems/Atom/RPI/Code/Source/RPI.Edit/Material/: MaterialPropertyValueSerializer.cpp
Gems/Atom/RPI/Code/Source/RPI.Public/Material/: MaterialShaderParameterLayout.cpp
Gems/Atom/RPI/Code/Tests/Common/: ShaderAssetTestUtils.cpp
Gems/BarrierInput/: CMakeLists.txt
Gems/Camera/: CMakeLists.txt
Gems/CameraFramework/: CMakeLists.txt
Gems/CertificateManager/: CMakeLists.txt
Gems/Compression/: CMakeLists.txt
Gems/CrashReporting/: CMakeLists.txt
Gems/CustomAssetExample/: CMakeLists.txt
Gems/DebugDraw/: CMakeLists.txt
Gems/DiffuseProbeGrid/: CMakeLists.txt
Gems/EMotionFX/: CMakeLists.txt
Gems/EditorPythonBindings/: CMakeLists.txt
Gems/ExpressionEvaluation/: CMakeLists.txt
Gems/ExternalToolchain/: CMakeLists.txt  README.md  gem.json
Gems/FastNoise/: CMakeLists.txt
Gems/GameState/: CMakeLists.txt
Gems/GameStateSamples/: CMakeLists.txt
Gems/Gestures/: CMakeLists.txt
Gems/GradientSignal/: CMakeLists.txt
Gems/GraphCanvas/: CMakeLists.txt
Gems/GraphModel/: CMakeLists.txt
Gems/ImGui/: CMakeLists.txt
Gems/InAppPurchases/: CMakeLists.txt
Gems/LandscapeCanvas/: CMakeLists.txt
Gems/LmbrCentral/: CMakeLists.txt
Gems/LocalUser/: CMakeLists.txt
Gems/LyShine/: CMakeLists.txt
Gems/TaintedGrailModdingSDK/Installer/: CMakeLists.txt  README.md
Gems/TaintedGrailModdingSDK/Installer/Source/Windows/: InstalledEditorLauncher.cpp  InstalledEditorLauncher.rc
Installer/: README.md  package.schema.json  suite.schema.json
Plugins/: README.md  plugin.schema.json
Registry/: AssetProcessorPlatformConfig.setreg
Research/: README.md
TaintedGrailModdingEditor/: project.json
cmake/: LYTestWrappers.cmake  LyAutoGen.cmake  Subdirectories.cmake  o3deConfigVersion.cmake
docs/: README.md
python/: requirements.txt
scripts/: o3de.bat
(+2937 files in other folders)
